tests/baselines/reference/importAttributes3(module=es2015).errors.txt
1.ts(1,27): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
1.ts(2,30): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
2.ts(1,31): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
2.ts(2,33): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.


==== 0.ts (0 errors) ====
    export interface I { }
    
==== 1.ts (2 errors) ====
    export type {} from './0' with { type: "json" }
                              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    export type { I } from './0' with { type: "json" }
                                 ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    
==== 2.ts (2 errors) ====
    import type { I } from './0'  with { type: "json" }
                                  ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    import type * as foo from './0' with { type: "json" }
                                    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    